--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ngx-avatar": "^3.7.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.10.12",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
